force-app/main/default/objects/VRT_Invoice__c/VRT_Invoice__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <label>Factura Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>