force-app/main/default/objects/VRT_Invoice__c/fields/VRT_DAT_IssueDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_IssueDate__c</fullName>
    <label>Fecha de factura</label>
    <type>Date</type>
</CustomField>