force-app/main/default/objects/VRT_Invoice__c/fields/VRT_DIV_Amount__c.field-meta.xml
<CustomField>
    <fullName>VRT_DIV_Amount__c</fullName>
    <label>Coste Total</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>