force-app/main/default/objects/VRT_Invoice__c/fields/VRT_LKP_Account__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>