force-app/main/default/objects/VRT_Invoice__c/fields/VRT_LKP_Rental__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Rental__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Alquiler</label>
    <referenceTo>VRT_Rental__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>