force-app/main/default/objects/VRT_Invoice__c/fields/VRT_SEL_Status__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Status__c</fullName>
    <label>Estado de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagada</fullName>
                <default>true</default>
                <label>Pagada</label>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Emitida</fullName>
            </value>
            <value>
                <fullName>Borrador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>