force-app/main/default/objects/VRT_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VRT_LKP_Account__c</columns>
    <columns>VRT_LKP_Rental__c</columns>
    <columns>VRT_DIV_Amount__c</columns>
    <columns>VRT_SEL_Status__c</columns>
    <columns>VRT_DAT_IssueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>